--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 
     "autoload": {
         "psr-4": {
-            "QL\\Hal\\": "src"
+            "QL\\Hal\\": "src",
+            "QL\\Kraken\\": "src-kraken"
         }
     },
     "repositories": [
@@ -25,7 +26,7 @@
         "guzzle/guzzle": "3.9.*",
         "guzzlehttp/guzzle": "5.*",
         "knplabs/github-api": "1.3.1",
-        "php-64bit": "~5.4",
+        "php-64bit": "~5.5",
         "predis/predis": "~1.0",
         "psr/log": "*",
         "ql/exception-toolkit": "~0.1",
