Convert from requirejs to webpack

--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "hal9000",
-  "repository": {
-    "type": "git",
-    "url": "http://git/web-core/hal.git"
-  },
-  "dependencies": {
-    "gulp": "^3.6.0",
-    "gulp-autoprefixer": "^2.0.0",
-    "gulp-clean": "^0.2.4",
-    "gulp-compass": "^1.1.8",
-    "gulp-concat": "^2.2.0",
-    "gulp-if": "^1.2.0",
-    "gulp-jshint": "^1.5.3",
-    "gulp-json-editor": "2.1.1",
-    "gulp-load-plugins": "^0.4.0",
-    "gulp-plumber": "^0.6.1",
-    "gulp-rename": "1.2.0",
-    "gulp-uglify": "^0.3.0",
-    "open": "0.0.4",
-    "requirejs": "^2.1.11",
-    "tiny-lr": "0.0.5"
-  },
-  "devDependencies": {
-    "gulp-livereload": "^1.2.0"
-  }
+    "name": "hal9000",
+        "repository": {
+        "type": "git",
+        "url": "http://git/web-core/hal.git"
+    },
+    "dependencies": {
+        "gulp": "^3.6.0",
+        "gulp-autoprefixer": "^2.0.0",
+        "gulp-webpack": "^1.4.0",
+        "gulp-clean": "^0.2.4",
+        "gulp-compass": "^1.1.8",
+        "gulp-concat": "^2.2.0",
+        "gulp-if": "^1.2.0",
+        "gulp-jshint": "^1.5.3",
+        "gulp-load-plugins": "^0.4.0",
+        "gulp-plumber": "^0.6.1",
+        "gulp-rename": "1.2.0",
+        "gulp-uglify": "^0.3.0",
+        "open": "0.0.4"
+    }
 }
