--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dependencies": {
         "gulp": "^3.6.0",
         "gulp-autoprefixer": "^2.0.0",
-        "gulp-webpack": "^1.4.0",
+        "gulp-webpack-build": "^0.7.1",
         "gulp-clean": "^0.2.4",
         "gulp-compass": "^1.1.8",
         "gulp-concat": "^2.2.0",
@@ -16,7 +16,6 @@
         "gulp-load-plugins": "^0.4.0",
         "gulp-plumber": "^0.6.1",
         "gulp-rename": "1.2.0",
-        "gulp-uglify": "^0.3.0",
-        "open": "0.0.4"
+        "gulp-uglify": "^0.3.0"
     }
 }
