--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-    "name": "hal9000",
-        "repository": {
-        "type": "git",
-        "url": "http://git/web-core/hal.git"
-    },
+    "name": "HAL 9000",
+
     "dependencies": {
+        "bower": "~1.4.1",
+
         "gulp": "^3.6.0",
         "gulp-autoprefixer": "^2.0.0",
-        "gulp-webpack-build": "^0.7.1",
         "gulp-clean": "^0.2.4",
         "gulp-compass": "^1.1.8",
         "gulp-concat": "^2.2.0",
@@ -16,6 +14,7 @@
         "gulp-load-plugins": "^0.4.0",
         "gulp-plumber": "^0.6.1",
         "gulp-rename": "1.2.0",
-        "gulp-uglify": "^0.3.0"
+        "gulp-uglify": "^0.3.0",
+        "gulp-webpack-build": "^0.7.1"
     }
 }
