--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "HAL 9000",
+    "name": "HAL-9000",
 
     "dependencies": {
         "bower": "~1.4.1",
@@ -14,6 +14,7 @@
         "gulp-load-plugins": "^0.4.0",
         "gulp-plumber": "^0.6.1",
         "gulp-rename": "1.2.0",
+        "gulp-sass": "1.3.3",
         "gulp-uglify": "^0.3.0",
         "gulp-webpack-build": "^0.7.1"
     }
