--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
 
     "dependencies": {
         "bower": "~1.4.1",
-
+        "del": "^1.1.1",
         "gulp": "^3.6.0",
         "gulp-autoprefixer": "^2.0.0",
-        "gulp-clean": "^0.2.4",
         "gulp-concat": "^2.2.0",
         "gulp-if": "^1.2.0",
         "gulp-jshint": "^1.5.3",
@@ -14,6 +13,7 @@
         "gulp-rename": "1.2.0",
         "gulp-sass": "1.3.3",
         "gulp-uglify": "^0.3.0",
-        "gulp-webpack-build": "^0.7.1"
+        "gulp-webpack-build": "^0.7.1",
+        "webpack": "^1.8.0"
     }
 }
