--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         }
     },
     "repositories": [
+        { "type": "vcs", "url": "http://git/web-core/hal-core" },
         {
             "type": "composer",
             "url": "http://composer/"
@@ -23,6 +24,7 @@
     ],
     "require": {
         "aws/aws-sdk-php": "2.7.*",
+        "doctrine/orm": "~2.5",
         "guzzle/guzzle": "3.9.*",
         "guzzlehttp/guzzle": "5.*",
         "knplabs/github-api": "1.3.1",
@@ -30,11 +32,11 @@
         "predis/predis": "~1.0",
         "psr/log": "*",
         "ql/exception-toolkit": "~0.1",
-        "ql/hal-core": "2.6.*",
+        "ql/hal-core": "dev-master",
         "ql/http-problem": "~1.0",
         "ql/mcp-cache": "~2.2",
         "ql/mcp-core": "1.*",
-        "ql/mcp-corp-account": "0.2.1",
+        "ql/mcp-corp-account": "1.0.0",
         "ql/mcp-crypto": "~1.2",
         "ql/mcp-logger": "1.3.*",
         "ql/panthor": "~2.0",
